<preference-headers
    xmlns:android="http://schemas.android.com/apk/res/android">

    <header android:fragment="com.bastien.smartmirror.SettingsMirror$GeneralFragment"
        android:id="@+id/hGeneral"
        android:icon="@drawable/ic_settings"
        android:title="@string/header_general"
        android:summary="@string/header_general_summary" />

    <header android:fragment="com.bastien.smartmirror.SettingsMirror$WeatherFragment"
        android:id="@+id/hWeather"
        android:icon="@drawable/ic_sunny"
        android:title="@string/header_weather"
        android:summary="@string/header_weather_summary">
        <!-- Arbitrary key/value pairs can be included with a header as
             arguments to its fragment. -->
        <extra android:name="someKey" android:value="someHeaderValue" />
    </header>

    <header android:fragment="com.bastien.smartmirror.SettingsMirror$MapFragment"
        android:id="@+id/hMap"
        android:icon="@drawable/ic_map"
        android:title="@string/header_map"
        android:summary="@string/header_map_summary" />

    <header android:fragment="com.bastien.smartmirror.SettingsMirror$Prefs1Fragment"
        android:id="@+id/hTransport"
        android:icon="@drawable/ic_directions"
        android:title="@string/header_transport"
        android:summary="@string/header_transport_summary" />

    <header android:fragment="com.bastien.smartmirror.SettingsMirror$Prefs1Fragment"
        android:id="@+id/hNews"
        android:icon="@drawable/ic_library"
        android:title="@string/header_news"
        android:summary="@string/header_news_summary" />

    <header android:fragment="com.bastien.smartmirror.SettingsMirror$Prefs1Fragment"
        android:id="@+id/hComincs"
        android:icon="@drawable/ic_chat"
        android:title="@string/header_comics"
        android:summary="@string/header_comics_summary" />

</preference-headers>